Fixed an issue where certain notifications were being displayed under wrong logic. Included animations to text for better visibility

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
 
 .header {
   font-family: 'Oswald', sans-serif;
+  padding: 25px 0 25px 0;
 }
 
 .welcome{
@@ -75,38 +76,112 @@ body {
   font-weight: bold;
 }
 
+#overlay > span:hover{
+  background: #ffffff 
+  -webkit-gradient(linear, 100% 0, 0 0, from(#ffffff), color-stop(0.1, gold), to(#ffffff));
+  background-position: 4rem top;
+  background-repeat: no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation-name: notification;
+  -webkit-animation-duration: 3s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-background-size: 8rem 100%;
+  
+}
+
+@keyframes overlay {
+    0% {
+        background-position: -4rem top;
+    }
+
+    100% {
+        background-position: 12.5rem top;
+    }
+}
+
+
+
 #overlay:active{
   background: #F7EB33;
   color: #000000;
 }
 
+
+
 .notification{
   position: relative;
   font-weight: bold;
   background-color: #000000;
-  border: 2px solid white;
+  border: 2px solid gold;
   border-radius: 15px;
   color: white;
   z-index: 999;
   text-align: center;
-  margin: 25px 15px 25px 15px;
-  padding: 25px 15px 25px 15px;
+  margin: 15px 15px 11px 15px;
+  padding: 15px 15px 11px 15px;
   font-size: 24px;
+  background: #ffffff 
+  -webkit-gradient(linear, 100% 0, 0 0, from(#ffffff), color-stop(0.5, gold), to(#ffffff));
+  background-position: 4rem top;
+  background-repeat: no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation-name: notification;
+  -webkit-animation-duration: 3.2s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-background-size: 4rem 100%;
+  
 }
+
+@keyframes notification {
+    0% {
+        background-position: -4rem top;
+    }
+
+    100% {
+        background-position: 60.5rem top;
+    }
+}
+
 
 .notification-over{
   position: relative;
   font-weight: bold;
-  background-color: maroon;
+  background-color: #cc0000;
   border: 2px solid white;
   border-radius: 15px;
   color: white;
   z-index: 999;
   text-align: center;
-  margin: 25px 15px 25px 15px;
-  padding: 25px 15px 25px 15px;
+  margin: 15px 15px 5px 15px;
+  padding: 15px 15px 5px 15px;
   font-size: 22px;
+  -webkit-animation-name: notification-over; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 2s; /* Safari 4.0 - 8.0 */
+  animation-name: notification-over;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
 }
+
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes notification-over {
+  0%   {background-color: #cc0000;}
+  50%  {background-color: #800000;}
+  100% {background-color: #cc0000;}
+}
+
+
+/* Standard syntax */
+@keyframes notification-over {
+  0%   {background-color: #cc0000;}
+  50%  {background-color: #800000;}
+  100% {background-color: #cc0000;}
+}
+
+
+
 
 .hide{
   display: none;
@@ -150,17 +225,19 @@ body {
   }
 
   .notification{
-    margin: 25px 0 25px 0;
-    padding: 15px 0 15px 0;
+    margin: 25px;
+    padding: 15px 10px 0 10px;
     font-weight: bold;
     font-size: 18px;
+    border: 2px solid gold;
   }
   
   .notification-over{
 
-    margin: 25px 5px 25px 5px;
-    padding: 15px 5px 15px 5px;
-    font-weight: medium;
+    margin: 25px;
+    padding: 15px 25px 15px 25px;
+    font-weight: bold;
+    font-size: 18px;
   }
 }
 
@@ -169,4 +246,4 @@ body {
     font-size: medium;
     padding: 0 25px 0 25px;
   }
-}
+      }
